[package]
name = "sohar_python"
version = "0.1.0"
edition = "2018"

[lib]
name = "sohar_python"
# "cdylib" is necessary to produce a shared library for Python to import from.
#
# Downstream Rust code (including code in `bin/`, `examples/`, and `tests/`) will not be able
# to `use string_sum;` unless the "rlib" or "lib" crate type is also included, e.g.:
# crate-type = ["cdylib", "rlib"]
crate-type = ["cdylib"]

[dependencies.pyo3]
version = "0.15.0"
features = ["extension-module"]

[dependencies]
itertools = "0.10.0"
log = "0.4.14"
num = "0.4.0"
# numpy = "0.14"
# ndarray = ">= 0.13, < 0.16"
ordered-float = "3.4.0"
pyo3-log = "0.5.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
oat_rust = { path = "../oat_rust" }
sohar_rust = { path = "../sohar_rust" }